--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "dependencies": {
     "minimist": "^1.2.0",
-    "ssh2": "^0.5.0"
+    "ndjson": "^1.4.3",
+    "ssh2": "^0.5.0",
+    "tmp": "0.0.28"
   },
   "scripts": {
     "start": "bin/cmd.js"
