--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "dependencies": {
     "minimist": "^1.2.0",
     "ndjson": "^1.4.3",
+    "rpc-multistream": "^0.9.7",
     "ssh2": "^0.5.0",
-    "tmp": "0.0.28"
+    "tmp": "0.0.28",
+    "uuid": "^3.0.1"
   },
   "scripts": {
     "start": "bin/cmd.js"
