--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "minimist": "^1.2.0",
     "ndjson": "^1.4.3",
+    "noble": "^1.8.1",
     "node-hid": "^0.5.4",
     "rpc-multistream": "^0.9.7",
     "ssh2": "^0.5.0",
