--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "bionet-labdevice",
+  "name": "renegade-labdevice",
   "version": "0.0.1",
   "dependencies": {
     "minimist": "^1.2.0",
     "ndjson": "^1.4.3",
     "noble": "^1.8.1",
-    "node-hid": "^0.5.4",
+    "node-hid": "^1.2.0",
     "rpc-multistream": "^0.9.7",
     "ssh2": "^0.5.0",
     "tmp": "0.0.28",
