--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ndjson": "^1.4.3",
     "rpc-multistream": "^0.9.7",
     "tmp": "0.0.28",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "renegade-lims-connector": "git+https://github.com/renegadebio/renegade-lims-connector.git"
   },
   "scripts": {
     "start": "bin/cmd.js"
